[package]
name = "passchecker"
version = "0.1.0"
edition = "2021"
author = "CordlessCoder"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.0.30", features = ["derive", "env", "unicode"] }
owo-colors = { version = "3.5.0", features = ["supports-color", "supports-colors"] }
const_format = {version = "0.2", features = ["rust_1_64"]}
